--- a/CSS/layout.html
+++ b/CSS/layout.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
+    <meta mane="viewport" content="width=device-width, initial-scale=1.0">
     <title>검색 UI</title>
     <style>
         body {
@@ -11,7 +12,7 @@
 
         /* 전체 레이아웃 - Grid */
         .container {
-            width: 90%;
+            width: 80vw;
             margin: 40px auto;
             display: grid;
             grid-template-rows: auto 1fr;
@@ -30,6 +31,7 @@
             border: 1px solid #aaa;
             border-radius: 4px;
             font-size: 14px;
+            background-color: rgba(0,0,125,0.5);
         }
 
         .search-box button {
