--- a/CSS/bootstrap.html
+++ b/CSS/bootstrap.html
@@ -15,15 +15,15 @@
         <div class="col-md-4">
             <h2 class="text-center mb-4">로그인</h2>
             <form>
-                <div class="mb-3">
-                    <label for="inputEmail" class="form-label">아이디</label>
-                    <input type="email" class="form-control" id="inputEmail" placeholder="아이디를 입력하세요">
+                <div class="mb-5">
+                    <label for="inputEmail" class="form-label">이메일</label>
+                    <input type="email" class="form-control" id="inputEmail" placeholder="이메일을 입력하세요">
                 </div>
-                <div class="mb-3">
+                <div class="mb-5">
                     <label for="inputPassword" class="form-label">비밀번호</label>
                     <input type="password" class="form-control" id="inputPassword" placeholder="비밀번호를 입력하세요">
                 </div>
-                <button type="submit" class="btn btn-primary w-100">로그인</button>
+                <button type="submit" class="btn btn-primary w-100 mb-10">로그인</button>
             </form>
             <div class="text-center mt-3">
                 <a href="#" class="small">회원가입</a> | 
