--- a/CSS/bootstrap-menu.html
+++ b/CSS/bootstrap-menu.html
@@ -12,8 +12,9 @@
 <body>
     <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasMenu"
         aria-controls="offcanvasMenu">
-        Open Menu
+        <i class="bi bi-list" style="font-size: 2rem;"></i>
     </button>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasMenu" aria-labelledby="offcanvasMenuLabel">
         <div class="offcanvas-header">
