--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -1,124 +1,154 @@
 <!Doctype html>
-<html lang ="en">
+<html lang="en">
 <head>
-    <meta charset = "UTF-8">
-    <meta name = "veiwpoint" content = "width = device-width, initial-scale=1.0">
-    <title>윤세준 프로필</title> 
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>윤세준 프로필</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #f2f2f2;
+        }
+        .container {
+            display: flex;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        .sidebar {
+            width: 20%;
+            background-color: #e6e6e6;
+            padding: 15px;
+            box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+        }
+        .sidebar ul {
+            list-style: none;
+            padding: 0;
+        }
+        .sidebar ul li {
+            margin: 10px 0;
+        }
+        .sidebar ul li a {
+            text-decoration: none;
+            color: #333;
+        }
+        .content {
+            width: 80%;
+            background-color: #fff;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+        }
+        h1, h3 {
+            text-align: center;
+        }
+        hr {
+            border: 0;
+            height: 1px;
+            background: #ccc;
+            margin: 20px 0;
+        }
+        img {
+            display: block;
+            margin: 0 auto;
+        }
+    </style>
 </head>
 
-<body bgcolor="#f2f2f2">
+<body>
+    <div class="container">
+        <!-- Sidebar -->
+        <div class="sidebar" style="position: fixed; top: 0; left: 0; height: 100%; overflow-y: auto;">
+            <div style="margin-bottom: 20px; padding: 10px; background-color: #d9d9d9; border-radius: 10px;">
+                <h3>프로필</h3>
+                <p><strong>이름:</strong> 윤세준</p>
+                <p><strong>나이:</strong> 29</p>
+                <p><strong>전공:</strong> 화학공학과</p>
+                <p><strong>취미:</strong> 러닝, 축구</p>
+                <p><strong>자기소개:</strong> 열심히 배우고 성장하는 개발자입니다.</p>
+            </div>
+            <div style="padding: 10px; background-color: #d9d9d9; border-radius: 10px;">
+                <h3>목차</h3>
+                <ul>
+                    <li><a href="#profile">프로필</a></li>
+                    <li><a href="#food">좋아하는 음식</a></li>
+                    <li><a href="#goals">새해 목표</a></li>
+                    <li><a href="#music">좋아하는 음악</a></li>
+                    <li><a href="#childhood">유년 시절</a></li>
+                </ul>
+            </div>
+        </div>
 
-<center>
-    <!-- 제목 -->
-    <div>
-        <h1> ✨ 윤세준의 프로필 페이지 ✨</h1>
-        <hr width="60%"><br>
+        <!-- Main Content -->
+        <div class="content" style="margin-left: 22%;">
+            <div id="profile">
+                <div style="position: fixed; top: 0; left: 0; width: 100%; background-color: #fff; z-index: 1000; text-align: center; padding: 10px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
+                    <h1>✨ 윤세준의 프로필 페이지 ✨</h1>
+                </div>
+                <hr>
+                <figure>
+                    <img src="./윤세준.png" width="200" style="border-radius:20px;">
+                </figure>
+            </div>
+
+            <hr>
+            <div id="food">
+                <h3>🍕 좋아하는 음식</h3>
+                <ol style="list-style:none; padding-left:0; text-align:center;">
+                    <li>피자</li>
+                    <li>제육볶음</li>
+                    <li>돈까스</li>
+                </ol>
+            </div>
+
+            <hr>
+            <div id="goals">
+                <h3>🎯 새해 목표</h3>
+                <ul style="list-style:none; padding-left:0; text-align:center;">
+                    <li>일기쓰기</li>
+                    <li>하루 10000걸음 걷기</li>
+                    <li>자격증 취득</li>
+                    <li>금주</li>
+                    <li>책 읽기</li>
+                </ul>
+            </div>
+
+            <hr>
+            <div id="music">
+                <h3>좋아하는 음악</h3>
+                <b style="display:block; text-align:center;">경제환</b>
+                <ul style="list-style:none; padding-left:0; text-align:center;">
+                    <li><a href="https://www.youtube.com/watch?v=crRYvendj98&list=RDcrRYvendj98&start_radio=1">그때는 아니었다</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=dagWXqUz-mg&list=RDdagWXqUz-mg&start_radio=1">마지막으로</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=n56STxnuGIg&list=RDn56STxnuGIg&start_radio=1">사랑은 영화처럼</a></li>
+                </ul>
+                <b style="display:block; text-align:center;">현서</b>
+                <ul style="list-style:none; padding-left:0; text-align:center;">
+                    <li><a href="https://www.youtube.com/watch?v=Hv2tw4kAu40&list=RDHv2tw4kAu40&start_radio=1">그 해 여름 우리는</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=MDF6_-Nv48E&list=RDMDF6_-Nv48E&start_radio=1">춘몽</a></li>
+                </ul>
+            </div>
+
+            <hr>
+            <div id="childhood">
+                <h3>유년 시절</h3>
+                <ul style="text-align:center; list-style:none; padding-left:0;">
+                    <figure>
+                        <img src="./바둑.jpg" alt="바둑 영재">
+                        <figcaption>바둑 영재</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="./자전거.jpg" alt="사이클 선수 유망주">
+                        <figcaption>사이클 선수 유망주</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="./나무.jpg" alt="타잔 라이벌">
+                        <figcaption>타잔 라이벌</figcaption>
+                    </figure>
+                </ul>
+            </div>
+        </div>
     </div>
-
-
-    <!--사진 -->
-    <div>
-        <figure>
-            <img src="/윤세준.png" width="200" style="border-radius:20px;"><br><br>
-
-        </figure>
-    </div>
-
-
-    <!--자기소개-->
-    <div>
-        <table border="1" cellpadding="10" width="600">
-            <tr>
-                <th>이름</th><td>윤세준</td>
-                <th>나이</th><td>29</td>
-            </tr>
-            <tr>
-                <th>전공</th><td>화학공학과</td>
-                <th>취미</th><td>러닝, 축구</td>
-            </tr>
-            <tr>
-                <th>자기소개</th>
-                <td colspan="3" align="center">열심히 배우고 성장하는 개발자입니다.</td>
-            </tr>
-        </table>
-    </div>
-
-    <br><hr width="60%"><br>
-
-    <!--음식 작성-->
-    <div>
-        <h3>🍕 좋아하는 음식</h3>
-        
-        <ol style="list-style:none; padding-left:0;">
-            <li>피자</li>
-            <li>제육볶음</li>
-            <li>돈까스</li>
-        </ol>
-    </div>
-
-  <br><hr width="60%"><br>
-
-    <!--목표-->
-    <div>
-        <h3>🎯 새해 목표</h3>
-        <ul style="list-style:none; padding-left:0;">
-            <li>일기쓰기</li>
-            <li>하루 10000걸음 걷기</li>
-            <li>자격증 취득</li>
-            <li>금주</li>
-            <li>책 읽기</li>
-        </ul>
-    </div>
-
-<br><hr width="60%"><br>
-
-    <!--좋아하는 음악-->
-    <div>
-        <h3>좋아하는 음악</h3>
-
-            <b>경제환</b>
-            <ul style="list-style:none; padding-left:0;">
-                <nav>
-                <li><a href="https://www.youtube.com/watch?v=crRYvendj98&list=RDcrRYvendj98&start_radio=1">그때는 아니었다</a> </li>
-                <li><a href="https://www.youtube.com/watch?v=dagWXqUz-mg&list=RDdagWXqUz-mg&start_radio=1">마지막으로</a> </li>
-                <li><a href="https://www.youtube.com/watch?v=n56STxnuGIg&list=RDn56STxnuGIg&start_radio=1">사랑은 영화처럼</a> </li>
-            </ul>
-
-            <b>현서</b>
-            <ul style="list-style:none; padding-left:0;">
-                <nav>
-                <li><a href="https://www.youtube.com/watch?v=Hv2tw4kAu40&list=RDHv2tw4kAu40&start_radio=1">그 해 여름 우리는</a> </li>
-                <li><a href="https://www.youtube.com/watch?v=MDF6_-Nv48E&list=RDMDF6_-Nv48E&start_radio=1">춘몽</a> </li>
-            </ul>
-    </div>
-
-    <br><hr width="60%"><br>
-
-    <!--유년시절 사진-->
-    <div>
-        <h3>유년 시절 </h3>
-        <ul>
-            <figure>
-                <img src="/바둑.jpg" alt="그리스">
-                <figcaption>바둑 영재</figcaption>
-            </figure>
-
-            <figure>
-                <img src="/자전거.jpg" alt="그리스">
-                <figcaption>사이클 선수 유망주</figcaption>
-            </figure>
-
-            <figure>
-                <img src="/나무.jpg" alt="그리스">
-                <figcaption>타잔 라이벌</figcaption>
-            </figure>
-        </ul>
-
-    </div>
-
-    <br><br>
-
-</center>
 </body>
-
 </html>
